<resources>
    <string name="app_name">Petiverse life</string>
    <string name="input_username">Username o correo electrónico</string>
    <string name="input_password">Contraseña</string>
    <string name="button_login">Entrar</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Mis mascotas</string>
    <string name="title_dashboard">Descubre</string>
    <string name="title_notifications">Cuidados</string>
    <string name="title_breed">Razas de perros</string>
    <string name="name_pet">Nombre</string>
    <string name="pet_type">Tipo de mascota</string>
    <string name="age">Año</string>
    <string name="breed">Raza</string>
    <string name="color">Color</string>
    <string name="gender">Genero</string>
    <string name="register">Registrarme</string>
    <string name="forget_password">Olvidé mi contraseña</string>
    <string name="or_login_with">ó inicia sesión con</string>

</resources>